--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ optimize rendering of large datasets, reducing map load times by through lazy lo
       <div class="box">
           <h3>contact info</h3>
           
-          <p> <i class="fas fa-envelope"></i>contactabhinav2108@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>abhinavkr.2108@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>New Delhi, India-110078</p>
           <div class="share">
 
