working contact form

--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@ optimize rendering of large datasets, reducing map load times by through lazy lo
       <div class="image-box">
         <img draggable="false" src="./assests/images/contact1.png" alt="">
       </div>
-    <form action="https://forms.office.com/r/4EyxDwY6QH">
-      
+    <form action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="access_key" value="cac01f2e-c23e-4729-ab5e-0da0204f2621">
       <div class="form-group">
         <div class="field">
           <input type="text" name="name" placeholder="Name" required>
