Project Description Changes

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <h3>Worksheet</h3>
         </div>
         <div class="desc">
-          <p>Created a mind puzzle game in android studio where we need to match pairs of identical images
+          <p>Worksheet is a powerful and intuitive spreadsheet application built with React and Next.js, designed to help you organize, analyze, and visualize your data with ease.
  
           
             
